# djin

./: .env.example  .gitignore  README.md  context_text  main.py  pyproject.toml  tree.txt
djinn/cli/: __init__.py  app.py
djinn/common/: state.py
djinn/features/tasks/: __init__.py
specs/: devs.md  general.md
src/djin/: __init__.py  main.py
src/djin/cli/: __init__.py  app.py  commands.py
src/djin/common/: config.py  errors.py  state.py
src/djin/db/: schema.py
src/djin/features/: __init__.py
src/djin/features/accounting/: __init__.py  agent.py  api.py  commands.py  playwright_client.py  tagui_client.py
src/djin/features/accounting/graph/: __init__.py  nodes.py  state.py  workflow.py
src/djin/features/moneymonk/: __init__.py
src/djin/features/notes/: __init__.py  commands.py
src/djin/features/notes/db/: schema.py
src/djin/features/orchestrator/: __init__.py  agent.py  api.py  commands.py
src/djin/features/reports/: __init__.py  agent.py  api.py  commands.py  models.py
src/djin/features/reports/llm/: client.py  prompts.py
src/djin/features/tasks/: __init__.py  ado_client.py  agent.py  api.py  commands.py  display.py  jira_client.py  models.py
src/djin/features/tasks/graph/: __init__.py  nodes.py  state.py  workflow.py
src/djin/features/tasks/llm/: client.py  prompts.py
src/djin/features/textsynth/: __init__.py  agent.py  api.py  commands.py
src/djin/features/textsynth/graph/: nodes.py  state.py  workflow.py
src/djin/features/textsynth/llm/: client.py  prompts.py
src/djin/features/time/: __init__.py
