[project]
name = "djin"
dynamic = ["version"]
description = "Djin is your magical terminal companion that banishes tedious dev tasks by managing Jira tickets, tracking time, taking context-aware notes, and automating MoneyMonk entries so you can stay in your coding flow"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "jira>=3.10.5",
    "langchain-groq>=0.3.1",
    "requests>=2.31.0",
    "langgraph>=0.3.21",
    "prompt-toolkit>=3.0.50",
    "python-dotenv>=1.1.0",
    "rich>=13.9.4",
    "loguru>=0.7.2", # Added loguru
    "pyotp>=2.9.0",
    "playwright>=1.51.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/djin/__version__.py"

[project.scripts]
djin = "djin.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/djin"]

 

